# macro

./: README.md  neura.py  pyproject.toml
macro/: _new_constants.py  aa.xlsx  ab.xlsx  az.xlsx  final_perf_dt.xlsx  final_perf_kn.xlsx  final_perf_lm.xlsx  final_perf_lm1.xlsx  final_perf_rf.xlsx  functional.py  graph_loader.py  new_base.py  new_base_bootstrap_multivariate_feature_selectors.py  new_base_fold_checker.py  new_base_test.py  new_base_test_projectors.py  new_base_test_projectors_translate.py  new_base_truegarage.py  new_base_trueuse_phase0.py  new_base_trueuse_phase0_garage.py  new_base_trueuse_phase1.py  new_base_trueuse_phase1_garage.py  new_base_trueuse_phase2.py  new_base_trueuse_phase2_garage.py  new_base_trueuse_phase3.py  new_base_trueuse_phase3_garage.py  new_base_trueuse_pods.py  new_base_utils.py  new_constants.py  new_data_check.py  newbase_trueuse_phase1_expert_debug.py  newborn.py  phase_1_chosen.xlsx  raise_fold_generator.py  rep_perf_kn.xlsx  rep_perf_lm_spec.xlsx  rep_perf_rf.xlsx  review_phase1.py
macro/new_utils/: __init__.py  _reader_classes.py  readers.py
macro/old/: checking_nbeats.py  cluster_them.py  fertilizer.py  (+21 more)
notebooks/: fold_checker.ipynb  fold_checker_alternate.ipynb  fold_shadow.ipynb  nb_seasons.ipynb  new_base_trueuse.ipynb  newbase_trueuse_phase1_expert.ipynb  overview_phase0.ipynb  overview_phase0_meta.ipynb  overview_phase2.ipynb  result_overview.ipynb  review_model_agnostic.ipynb  review_model_specific.ipynb  review_topology.ipynb
r/: autoarima.R  deadarima.R  magicrima.R  magicrima2.R  rima_func.R  rima_func_script.R
(+26 files in other folders)
