[tool.poetry]
name = "macro"
version = "0.0.1"
description = "Modelling framework"
authors = [
  "edazizovv",
]
license = "MIT"
readme = "README.md"
packages = [{include = "macro"}]

[tool.poetry.dependencies]
python = "^3.12"
torch = "^2.5.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"